--- a/pb/indexview.html
+++ b/pb/indexview.html
@@ -81,7 +81,7 @@
                     <img src="img/icons/win/py.png" alt="ICON">
                 </td>
                 <td>
-                    <a href="/bifrost-legacy" target="_top">THRYM.PY</a>
+                    <a href="/projects/thrym" target="_top">THRYM.PY</a>
                 </td>
                 <td align="right">2023-12-19 01:14</td>
                 <td align="right">27.9 MB</td>
