--- a/pb/indexview.html
+++ b/pb/indexview.html
@@ -45,6 +45,39 @@
             </tr>
             <tr>
                 <td valign="top">
+                    <img src="img/icons/win/dir.png" alt="ICON">
+                </td>
+                <td>
+                    <a href="/projects" target="_top">PROJECTS</a>
+                </td>
+                <td align="right">2024-03-23 17:45 </td>
+                <td align="right">-</td>
+                <td align="right">Projects</td>
+            </tr>
+            <tr>
+                <td valign="top">
+                    <img src="img/icons/win/htm.png" alt="ICON">
+                </td>
+                <td>
+                    <a href="/rc-eol" target="_top">RC-EOL.RTF</a>
+                </td>
+                <td align="right">1980-01-01 00:00 </td>
+                <td align="right">8.06 MB</td>
+                <td align="right">0...5</td>
+            </tr>
+            <tr>
+                <td valign="top">
+                    <img src="img/icons/win/dx.png" alt="ICON">
+                </td>
+                <td>
+                    <a href="/Fimbulvetr" target="_top">FIMBLVTR.EXE</a>
+                </td>
+                <td align="right">2024-04-01 12:00 </td>
+                <td align="right">1.96 GB</td>
+                <td align="right">Fimbulvetr</td>
+            </tr>
+            <tr>
+                <td valign="top">
                     <img src="img/icons/win/webdoc.png" alt="ICON">
                 </td>
                 <td>
