Fix zero padding, kind of
Due to the integer math related to float-point numbers, the zero may or may not appear. However this does not affect its performance or usage. If you are using this for any timing-critical applications, please keep in mind that the milliseconds digit may be inaccurate.

--- a/projects/svgclock/index.html
+++ b/projects/svgclock/index.html
@@ -2028,7 +2028,7 @@
         var hr = dateObj.getHours().toString().padStart(2, "0");
         var mn = dateObj.getMinutes().toString().padStart(2, "0");
         var se = dateObj.getSeconds().toString().padStart(2, "0");
-        var ms = dateObj.getMilliseconds().toString();
+        var ms = dateObj.getMilliseconds().toString().padStart(3, "0");;
         var weekday = dateObj.getDay();
         var month = dateObj.getMonth();
         var day = dateObj.getDate().toString().padStart(2, "0");
