EOL for RagnaChooser
Goodbye, and thanks for the fish.

--- a/pb/indexview.html
+++ b/pb/indexview.html
@@ -61,9 +61,9 @@
                 <td>
                     <a href="/rc-eol" target="_top">RC-EOL.RTF</a>
                 </td>
-                <td align="right">1980-01-01 00:00 </td>
+                <td align="right">2024-10-25 00:01 </td>
                 <td align="right">8.06 MB</td>
-                <td align="right">0...5</td>
+                <td align="right">RagnaChooser EOL Notice</td>
             </tr>
             <tr>
                 <td valign="top">
